
    * The constructors of ``SmartClientMedium`` and its subclasses now require a
      ``base`` parameter.  ``SmartClientMedium`` implementations now also need
      to provide a ``remote_path_from_transport`` method.  (Andrew Bennetts)
      
    * The default permissions for creating new files and directories 
      should now be obtained from ``BzrDir._get_file_mode()`` and 
      ``_get_dir_mode()``, rather than from LockableFiles.
      (Martin Pool)

    * ``VersionedFile.join`` is deprecated. This method required local
      instances of both versioned file objects and was thus hostile to being
      used for streaming from a smart server. The new get_record_stream and
      insert_record_stream are meant to efficiently replace this method.
      (Robert Collins)


bzr 1.5 2008-05-16
------------------

This release of Bazaar includes several updates to the documentation, and fixes
to prepare for making rich root support the default format. Many bugs have been
squashed, including fixes to log, bzr+ssh inter-operation with older servers.

  CHANGES:

    * Suppress deprecation warnings when bzrlib is a 'final' release. This way
      users of packaged software won't be bothered with DeprecationWarnings,
      but developers and testers will still see them. (John Arbash Meinel)

  DOCUMENTATION:

    * Incorporate feedback from Jelmer Vernooij and Neil Martinsen-Burrell
      on the plugin and integration chapters of the User Guide.
      (Ian Clatworthy)


bzr 1.5rc1 2008-05-09
---------------------

  NOTES WHEN UPGRADING:

  CHANGES:

    * Broader support of GNU Emacs mail clients. Set
      ``mail_client=emacsclient`` in your bazaar.conf and ``send`` will pop the
      bundle in a mail buffer according to the value of ``mail-user-agent``
      variable. (Xavier Maillard)

  FEATURES:

  IMPROVEMENTS:

    * Diff now handles revision specs like "branch:" and "submit:" more
      efficiently.  (Aaron Bentley)
